# gyrosse_ros2_control

./: .gitmodules  README.md
gyrosse_bringup/: CMakeLists.txt  package.xml
gyrosse_bringup/config/: gyrosse_controller.yaml  gyrosse_controllers.yaml  ps4.config.yaml
gyrosse_bringup/launch/: display.launch.py  gazebo.launch.py  gyrosse.launch.py
gyrosse_description/: CMakeLists.txt  package.xml
gyrosse_description/config/gyrosse/: base.yaml
gyrosse_description/launch/: view_robot.launch.py
gyrosse_description/meshes/: chassis.stl  flywheel.stl  left_flywheel.stl  left_wheel.stl  motor_flywheel.stl  motor_wheel.stl  right_flywheel.stl  right_wheel.stl  wheel.stl
gyrosse_description/rviz/: gyrosse.rviz  gyrosse_view.rviz
gyrosse_description/urdf/: gazebo.xacro  gyrosse.joints_links.xacro  gyrosse.ros2_control.xacro  gyrosse.urdf.xacro  gyrosse_description.xacro  gyrosse_joints_links.xacro  materials.xacro  ros2_control.xacro
gyrosse_description/urdf/include/: common_macros.xacro  gazebo_macros.xacro  gyrosse_macro.xacro
